manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: "82234771"
spec:
    ports:
    - port: 8080 
    selector:
        app: "82234771"
