manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 82234771-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: app-82234771.cepg-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: "82234771"
            port:
              number: 8080
        pathType: Prefix
